--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="hero-contact">
         <h1 class="h1-tag hero">Organic Dry Food</h1> 
         <p class="p-tag hero-1">Be fit and healthy. Test our organic food</p>
-        <a href="#" class="btn button">buy now</a>
+        <a href="#checkout" class="btn button">buy now</a>
     </div>
     </header>
 
